adding brew display with simple animation

--- a/public/scss/base/typography.scss
+++ b/public/scss/base/typography.scss
@@ -49,3 +49,17 @@ p {
         text-transform: capitalize;
     }
 }
+
+// ------------------brew section expanded accordion------------------
+.brew-detail-info-wrapper{
+    h3{
+
+    }
+    .info-item-label{
+        font-size: 0.8rem;
+    }
+    .info-item-value{
+        font-size: 1rem;
+        text-transform: capitalize;
+    }
+}
