--- a/public/scss/components/accordion.scss
+++ b/public/scss/components/accordion.scss
@@ -14,21 +14,41 @@
                 font-size: 1.5rem;
                 font-family: suisse_intllight, Helvetica, sans-serif;
                 color: white;
+
+                transition: all 300ms ease-out;
+
+                &:hover {
+                    background-color: white;
+
+                    * {
+                        color: $black;
+                        border-color: $black;
+                    }
+                    .arrow {
+                        background-color: $black;
+                        &::before,&::after{
+                            background-color: $black;
+                        }
+
+                    }
+                }
             }
+
 
             button::after {
                 content: "" !important; //reset the default style provided with accordion.min.css
             }
         }
+
         //styling the active state(accordion is opened)
-        &.is-active{
+        &.is-active {
             button::after {
                 content: "" !important; //reset the default style provided with accordion.min.css
             }
         }
+
         .ac-panel {
             margin: 0;
         }
     }
 }
-
