--- a/public/scss/pages/coffee.scss
+++ b/public/scss/pages/coffee.scss
@@ -36,7 +36,11 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-
+            transition: all 300ms ease-out;
+            &:hover {
+                background-color: white;
+                *{color:$black; border-color: $black;}
+            }
             .coffee-item-wrap {
                 //make sure the text display is consistent even user type different cases
                 * {
