--- a/public/scss/pages/brew.scss
+++ b/public/scss/pages/brew.scss
@@ -127,6 +127,7 @@
         .info-row {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             padding: 2%;
         }
 
