--- a/public/scss/components/navigation.scss
+++ b/public/scss/components/navigation.scss
@@ -76,7 +76,7 @@ nav#top-nav {
 .menu-toggle__bar3 {
     width: 21px;
     height: 3px;
-    background-color: #000000;
+    background-color: white;
     margin: 4px 0;
     transition: 0.3s;
 }
