--- a/public/scss/components/modal.scss
+++ b/public/scss/components/modal.scss
@@ -39,7 +39,7 @@
 
     .modal-heading {
         position: absolute;
-        top: -12vh;//to take up the remaining space
+        top: -14%;//to take up the remaining space
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -81,5 +81,25 @@
     .dialog-overlay,
     .dialog-content {
         animation: none;
+    }
+}
+
+
+
+
+//------------------------------------------- RESPONSIVE BREAKPOINT -------------------------------------------
+@media screen and (max-width: 480px) {
+    .dialog-content {
+        width: 90vw;
+        margin: 0;
+        border: none;
+
+        .modal-heading {
+            top: 0;
+            justify-content: center;
+            input {
+                position: relative;
+            }
+        }
     }
 }
