--- a/public/scss/layout/grid.scss
+++ b/public/scss/layout/grid.scss
@@ -3,7 +3,7 @@
     max-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.5fr 1fr 6fr 0.5fr;
+    grid-template-rows: 1fr 1fr 9fr 1fr;
     gap: 0px 16px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -16,7 +16,6 @@
         grid-area: content;
         display: flex;
         margin: 0 2%;
-
     }
 
     .heading {
@@ -38,22 +37,16 @@
     }
 }
 
-#overview {
-    .grid-container {
-        grid-template-rows: 0.5fr 1fr 8fr 0.5fr;
-    }
-}
 
-#coffee{
-    margin: 25vh 0;
-    .grid-container{
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 9fr;
-        grid-template-areas:
-        "heading heading heading heading heading heading heading heading heading heading heading heading"
-        "content content content content content content content content content content content content";
-    }
-    .content {
-        border-bottom: 1px solid white;
+//------------------------------------------- RESPONSIVE BREAKPOINT -------------------------------------------
+@media screen and (max-width: 480px) {
+    .grid-container {
+        .heading{
+            padding: 0 4%;
+        }
+        .content {
+            flex-direction: column;
+            margin: 0 4% !important;
+        }
     }
 }
