--- a/public/scss/pages/coffee.scss
+++ b/public/scss/pages/coffee.scss
@@ -1,18 +1,22 @@
 #coffee .grid-container .content {
     margin: 0;
-    section {
-        flex: 1;
+
+    &>section {
+        flex: 0 0 50%;
         // the section itself also needs to be flexbox in order to limit the children within the box
         display: flex;
         flex-flow: column;
     }
+
     //make sure the center has one border without overlapping
     section:first-child {
         border-right: 1px solid white;
     }
 }
+
 #coffee-list {
-    height: 100%;
+    height: 85vh;
+
     h2 {
         border-bottom: 1px solid white;
         padding: 1% 2%;
@@ -20,7 +24,7 @@
 
     ul {
         overflow: scroll;
-        height: calc(2/3 * 100vh); //the content takes up 2/3 of the grid height
+        height: 100%; //the content takes up 2/3 of the grid height
         // reset the list style
         list-style: none;
         padding: 0;
@@ -37,22 +41,32 @@
             flex-direction: row;
             justify-content: space-between;
             transition: all 300ms ease-out;
+
             &:hover {
                 background-color: white;
-                *{color:$black; border-color: $black;}
+
+                * {
+                    color: $black;
+                    border-color: $black;
+                }
             }
+
             .coffee-item-wrap {
+
                 //make sure the text display is consistent even user type different cases
                 * {
                     text-transform: capitalize;
                 }
+
                 flex: 1;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+
                 h3 {
                     padding: 2px 0;
                 }
+
                 span:not(:first-child) {
                     margin-left: 0.5rem;
                 }
@@ -69,17 +83,22 @@
 //styling the detailed page of coffee description
 #coffee-info {
     padding: 2%;
+    height: 85vh;
 
     #hint-text {
         margin-top: 2rem;
         font-size: 2.5rem;
     }
-    .coffee-item-info{
+
+    .coffee-item-info {
         transition: all 500ms cubic-bezier(0.72, 0.2, 0.34, 0.83);
         height: 100%; // make sure the information container take up the whole height
         display: flex;
+        justify-content: center;
+        gap: 1rem 0;
         flex-wrap: wrap;
         flex-direction: row;
+
         .info-col {
             flex: 0 0 50%; //even spliting the container
             display: flex;
@@ -88,6 +107,7 @@
             &:first-child {
                 border-right: 1px solid white;
             }
+
             .info-row {
                 padding: 2%;
                 display: flex;
@@ -97,35 +117,42 @@
                 &:not(:last-child) {
                     border-bottom: 1px solid white;
                 }
+
                 //the fourth child of the column will take up the remaining space
                 &:nth-child(4) {
                     flex: 1;
                 }
             }
+
             //for the special row, it needs some adjustment as I made it too complicated in the design phase
             .special-row {
                 display: flex;
                 flex-direction: column;
-                & > * {
+
+                &>* {
                     width: 100%;
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: space-between;
                     align-items: center;
                 }
+
                 .special-row-2 {
                     justify-content: flex-start;
                     gap: 0.5rem;
-                    & > *:first-child {
+
+                    &>*:first-child {
                         flex: 100%;
                     }
+
                     //make the min-width of the chip tags here wider, as the text size gets bigger
                     .chips {
                         min-width: 5rem;
                     }
                 }
+
                 .special-row-3 {
-                    .info-item-wrapper{
+                    .info-item-wrapper {
                         display: flex;
                         flex-direction: column;
                     }
@@ -139,6 +166,7 @@
                     width: 100%;
                     border: 1px solid white;
                 }
+
                 padding: 8%;
             }
 
@@ -157,5 +185,55 @@
         opacity: 0;
         transform: scale(0);
     }
-    
+
+}
+
+
+//------------------------------------------- RESPONSIVE BREAKPOINT -------------------------------------------
+@media screen and (max-width: 480px) {
+
+    #coffee {
+        .grid-container {
+
+            .content {
+                height: 80vh;
+                flex-direction: column-reverse;
+                border-left: 1px solid white;
+                border-right: 1px solid white;
+
+
+                #coffee-info {
+                    padding: 4%;
+                    border: none;
+                    border-top: 1px solid white;
+                    height: max-content;
+                    flex: 0 0 66.7%;
+
+                    #hint-text {
+                        padding: 5%;
+                    }
+                }
+
+                #coffee-list {
+                    overflow: scroll;
+                    flex: 0 0 33.3%;
+
+                }
+
+                li {
+                    &:last-child {
+                        .coffee-item {
+                            border-bottom: none;
+                        }
+                    }
+                    &:nth-child(-n+2) {
+                        .coffee-item {
+                            border-bottom: 1px solid white;
+                        }
+                    }
+                }
+            }
+        }
+
+    }
 }
