--- a/public/scss/pages/hero-section.scss
+++ b/public/scss/pages/hero-section.scss
@@ -1,7 +1,8 @@
-#landing-page{
-    height:  calc(100vh - 75px);
+#landing-page {
+    height: calc(100vh - 75px);
     width: 100vw;
     display: flex;
+
     h1 {
         font-size: 6rem;
         margin: auto 0;
@@ -10,15 +11,33 @@
         padding-left: 10%;
         z-index: 2;
     }
+
     figure {
         position: absolute;
         bottom: 45%;
         right: 25%;
-        transform: translate(50%,50%);
+        transform: translate(50%, 50%);
 
         img {
             width: 400px;
             height: 400px;
         }
     }
+
+    @media screen and (max-width: 480px) {
+        //styling the landing page when the screen is smaller than 480px
+        & {
+            h1 {
+                padding-left: 5%;
+            }
+            figure {
+
+                img {
+                    width: 150px;
+                    height: 150px;
+                }
+            }
+        }
+    }
+
 }
