--- a/public/scss/components/navigation.scss
+++ b/public/scss/components/navigation.scss
@@ -1,4 +1,3 @@
-
 nav#top-nav {
     overflow: hidden;
     display: flex;
@@ -38,57 +37,112 @@ nav#top-nav {
     font-size: 2rem;
 }
 
-#top-nav #menu-toggle {
-    display: none;
+
+//overlay inspiration from https://codepen.io/hyoyeongkim/pen/BayjjwE
+.overlay {
+    z-index: 99;
+    position: fixed;
+    background: $black;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .35s, visibility .35s, height .35s;
+    overflow: hidden;
 }
 
-@media screen and (max-width: 600px) {
-    #top-nav a:not(:first-child) {
-        display: none;
-    }
 
-    #top-nav a#menu-toggle {
-        float: right;
-        display: block;
-    }
+.overlay.open {
+    opacity: 1;
+    visibility: visible;
+    height: 100%;
+    overflow: hidden;
 }
 
-@media screen and (max-width: 600px) {
-    #top-nav.nav--open {
-        position: relative;
-    }
-
-    #top-nav.nav--open #menu-toggle {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    #top-nav.nav--open a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
+.overlay.open li {
+    animation: fadeInRight .5s ease forwards;
+    animation-delay: .35s;
 }
 
-.menu-toggle__bar1,
-.menu-toggle__bar2,
-.menu-toggle__bar3 {
-    width: 21px;
-    height: 3px;
-    background-color: white;
-    margin: 4px 0;
-    transition: 0.3s;
+.overlay.open li:nth-of-type(2) {
+    animation-delay: .4s;
 }
 
-.menu-toggle--open .menu-toggle__bar1 {
-    transform: translate(0, 7px) rotate(-45deg);
+.overlay.open li:nth-of-type(3) {
+    animation-delay: .45s;
 }
 
-.menu-toggle--open .menu-toggle__bar2 {
+.overlay.open li:nth-of-type(4) {
+    animation-delay: .50s;
+}
+
+.overlay nav {
+    position: relative;
+    height: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+
+.overlay ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    display: inline-flex;
+    flex-direction: column;
+    gap: 2rem;
+    position: relative;
+    height: 100%;
+}
+
+.overlay ul li {
+    display: block;
+    height: 25%;
+    height: calc(100% / 4);
+    
+    position: relative;
     opacity: 0;
 }
 
-.menu-toggle--open .menu-toggle__bar3 {
-    transform: translate(0, -7px) rotate(45deg);
+.overlay ul li a {
+    display: block;
+    position: relative;
+    color: white;
+    text-decoration: none;
+    overflow: hidden;
+    font-size: 5rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.overlay ul li a:hover:after,
+.overlay ul li a:focus:after,
+.overlay ul li a:active:after {
+    width: 100%;
+}
+
+.overlay ul li a:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0%;
+    transform: translateX(-50%);
+    height: 2px;
+    background: white;
+    transition: .35s;
+}
+
+@keyframes fadeInRight {
+    0% {
+        opacity: 0;
+        left: 20%;
+    }
+
+    100% {
+        opacity: 1;
+        left: 0;
+    }
 }
