--- a/public/scss/components/cursor.scss
+++ b/public/scss/components/cursor.scss
@@ -37,7 +37,14 @@
     width: 48px;
     height: 48px;
 }
-
+//disabled the custom cursor when on a smaller screens
+@media screen and (max-width: 768px) {
+    .cursor, .cursor2 {
+        display: none;
+        visibility: hidden;
+    }
+    
+}
 //Customised Icons
 .arrow {
     background-color: white;
