--- a/public/scss/pages/coffee.scss
+++ b/public/scss/pages/coffee.scss
@@ -1,3 +1,7 @@
+
+
+
+
 #coffee .grid-container .content {
     margin: 0;
 
@@ -192,7 +196,7 @@
 
     .form-page {
         .form-input-container {
-            padding: 6%;
+            padding: 3% 6%;
             label {
                 flex-shrink: 0;
             }
