Ready for Vercel deployment

--- a/public/scss/components/tags.scss
+++ b/public/scss/components/tags.scss
@@ -1,4 +1,4 @@
-@import "@yaireo/tagify/src/tagify.scss";
+// Tagify styles are imported directly in HTML
 //override some style here
 $black: #1D1D1B;
 $accent: #FF3F61;
