--- a/public/scss/layout/form.scss
+++ b/public/scss/layout/form.scss
@@ -161,28 +161,61 @@ form {
     }
 }
 
-//styling the text input field
+//styling the text input field - more specific selectors
 input[type=text],
+input[type="text"],
 textarea {
     background-color: transparent !important;
     border: none !important;
     border-bottom: 1px solid $gray !important;
     margin: 4px 0 !important;
+    padding: 4px 0 !important;
+    color: white !important;
+    font-size: 1rem !important;
+    width: 100% !important;
 
     //make the placeholder text all uppercase without affecting user input
     text-transform: none;
 
     &::placeholder {
-        text-transform: uppercase;
-        letter-spacing: 0.01rem;
-        color: $gray;
-        font-size: 1rem;
+        text-transform: uppercase !important;
+        letter-spacing: 0.01rem !important;
+        color: $gray !important;
+        font-size: 1rem !important;
     }
 
     //change the focus state
     &:focus {
         border-bottom: 1px solid $accent !important;
-        transition: 200ms all ease-in-out;
+        transition: 200ms all ease-in-out !important;
+        outline: none !important;
+    }
+}
+
+// Additional specific selectors for form inputs
+.form-item input[type=text],
+.form-item input[type="text"],
+.form-item textarea {
+    background-color: transparent !important;
+    border: none !important;
+    border-bottom: 1px solid $gray !important;
+    margin: 4px 0 !important;
+    padding: 4px 0 !important;
+    color: white !important;
+    font-size: 1rem !important;
+    width: 100% !important;
+
+    &::placeholder {
+        text-transform: uppercase !important;
+        letter-spacing: 0.01rem !important;
+        color: $gray !important;
+        font-size: 1rem !important;
+    }
+
+    &:focus {
+        border-bottom: 1px solid $accent !important;
+        transition: 200ms all ease-in-out !important;
+        outline: none !important;
     }
 }
 
